{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 211,
  "lineage": "d10dac0a-dcd6-cda7-7b60-5c57f178ecd7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:security-group/sg-06c4961aa92585f65",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06c4961aa92585f65",
            "ingress": [],
            "name": "churn-mlops-cluster-20251223052812876300000009",
            "name_prefix": "churn-mlops-cluster-",
            "owner_id": "535002890483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "churn-mlops-cluster",
              "Project": "churn-mlops"
            },
            "tags_all": {
              "Name": "churn-mlops-cluster",
              "Project": "churn-mlops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:security-group/sg-051839753ef446ea8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-051839753ef446ea8",
            "ingress": [],
            "name": "churn-mlops-node-2025122305281289650000000c",
            "name_prefix": "churn-mlops-node-",
            "owner_id": "535002890483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "churn-mlops-node",
              "Project": "churn-mlops",
              "kubernetes.io/cluster/churn-mlops": "owned"
            },
            "tags_all": {
              "Name": "churn-mlops-node",
              "Project": "churn-mlops",
              "kubernetes.io/cluster/churn-mlops": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2576550361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c4961aa92585f65",
            "security_group_rule_id": "sgr-0fa1e67f4027717d9",
            "self": false,
            "source_security_group_id": "sg-051839753ef446ea8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-593629890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-016a9a7caa21aa3f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3778975247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-0f586632107e04911",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-298850625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-012b9d6750e242fc0",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3633479383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-02a11c8eab706648d",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3419292406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-0ed849c50edbbda79",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2943316285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-028f631c848bcead2",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3108749851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-09aa28254b5c2d7ed",
            "self": false,
            "source_security_group_id": "sg-06c4961aa92585f65",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2245497455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-0f513376a597147e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-789004704",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-064b86c47bf3ffab6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2337858127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-051839753ef446ea8",
            "security_group_rule_id": "sgr-0f2b8a13e31fad427",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:network-acl/acl-0d2861f492c6d812f",
            "default_network_acl_id": "acl-0d2861f492c6d812f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d2861f492c6d812f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "535002890483",
            "subnet_ids": [
              "subnet-012329cae20385cb5",
              "subnet-027d546736bc95d52",
              "subnet-0ad9189bb32b17ac2",
              "subnet-0f401bf2cef69572f"
            ],
            "tags": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:route-table/rtb-0d05caf2faa1c2fe6",
            "default_route_table_id": "rtb-0d05caf2faa1c2fe6",
            "id": "rtb-0d05caf2faa1c2fe6",
            "owner_id": "535002890483",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:security-group/sg-0347da5bed0a0efc2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0347da5bed0a0efc2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "535002890483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-default",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99f4774bec83b74",
            "arn": "arn:aws:ec2:us-east-1:535002890483:elastic-ip/eipalloc-0b99f4774bec83b74",
            "domain": "vpc",
            "id": "eipalloc-0b99f4774bec83b74",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-219-54-205.compute-1.amazonaws.com",
            "public_ip": "44.219.54.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "churn-mlops-vpc-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:internet-gateway/igw-0be8df9778390238b",
            "id": "igw-0be8df9778390238b",
            "owner_id": "535002890483",
            "tags": {
              "Name": "churn-mlops-vpc",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99f4774bec83b74",
            "association_id": "eipassoc-0b758a8ea67b41d56",
            "connectivity_type": "public",
            "id": "nat-02cc5b439172434c2",
            "network_interface_id": "eni-0fb4fbe36de4eee71",
            "private_ip": "10.0.101.205",
            "public_ip": "44.219.54.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027d546736bc95d52",
            "tags": {
              "Name": "churn-mlops-vpc-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fff5972928e0af141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cc5b439172434c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fff5972928e0af14",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be8df9778390238b",
            "id": "r-rtb-0dc7746781e2175ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc7746781e2175ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:route-table/rtb-0fff5972928e0af14",
            "id": "rtb-0fff5972928e0af14",
            "owner_id": "535002890483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "churn-mlops-vpc-private",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-private",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:route-table/rtb-0dc7746781e2175ef",
            "id": "rtb-0dc7746781e2175ef",
            "owner_id": "535002890483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "churn-mlops-vpc-public",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-public",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0690690ae5d3d90a6",
            "route_table_id": "rtb-0fff5972928e0af14",
            "subnet_id": "subnet-0f401bf2cef69572f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0490855789e23f0f5",
            "route_table_id": "rtb-0fff5972928e0af14",
            "subnet_id": "subnet-0ad9189bb32b17ac2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b352c5c9f4a72ec7",
            "route_table_id": "rtb-0dc7746781e2175ef",
            "subnet_id": "subnet-027d546736bc95d52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0822ffdc668f3b66d",
            "route_table_id": "rtb-0dc7746781e2175ef",
            "subnet_id": "subnet-012329cae20385cb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:subnet/subnet-0f401bf2cef69572f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f401bf2cef69572f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002890483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "churn-mlops-vpc-private-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-private-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:subnet/subnet-0ad9189bb32b17ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad9189bb32b17ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002890483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "churn-mlops-vpc-private-us-east-1b",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-private-us-east-1b",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:subnet/subnet-027d546736bc95d52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027d546736bc95d52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002890483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "churn-mlops-vpc-public-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-public-us-east-1a",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:subnet/subnet-012329cae20385cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012329cae20385cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002890483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "churn-mlops-vpc-public-us-east-1b",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc-public-us-east-1b",
              "kubernetes.io/cluster/churn-mlops": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc2806888b613996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002890483:vpc/vpc-0bc2806888b613996",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2861f492c6d812f",
            "default_route_table_id": "rtb-0d05caf2faa1c2fe6",
            "default_security_group_id": "sg-0347da5bed0a0efc2",
            "dhcp_options_id": "dopt-0d2c4f01856b7161f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc2806888b613996",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d05caf2faa1c2fe6",
            "owner_id": "535002890483",
            "tags": {
              "Name": "churn-mlops-vpc",
              "kubernetes.io/cluster/churn-mlops": "shared"
            },
            "tags_all": {
              "Name": "churn-mlops-vpc",
              "kubernetes.io/cluster/churn-mlops": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}